--- a/app/src/main/res/layout/activity_about_professional.xml
+++ b/app/src/main/res/layout/activity_about_professional.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".about_professionals">
+    tools:context=".AboutProfessional">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -42,6 +42,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
+                        android:id="@+id/tv_professional_name_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Ruben Dias"
@@ -57,6 +58,7 @@
                         android:layout_marginTop="8dp"/>
                 </LinearLayout>
                 <TextView
+                    android:id="@+id/tv_professional_speciality_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textColor="@color/black"
@@ -65,33 +67,21 @@
                     android:textSize="18dp"
                     />
 
-                <LinearLayout
+                <RatingBar
+                    android:id="@+id/rb_rating"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content">
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_star"/>
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_star"/>
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_star"/>
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_star"/>
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="wrap_content"
-                        android:src="@mipmap/ic_star"/>
-                </LinearLayout>
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:isIndicator="true"
+                    style="@style/Widget.AppCompat.RatingBar.Indicator"
+                    android:theme="@style/RatingBar"
+                    android:backgroundTintMode="@color/secondary"
+                    android:stepSize="0.1"
+                    android:numStars="5"
+                    />
             </LinearLayout>
         </LinearLayout>
-        
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="300dp"
@@ -102,6 +92,7 @@
 
             >
             <TextView
+                android:id="@+id/tv_professional_about_text"
                 android:textSize="20dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -112,9 +103,9 @@
             viverra. Class aptent taciti sociosqu ad litora."/>
         </LinearLayout>
         <Button
+            android:id="@+id/btn_send_appointment"
             android:layout_width="200dp"
             android:layout_height="45dp"
-
             style="@style/OrangeButton"
             android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_rectangle"
@@ -123,32 +114,79 @@
             />
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Email: rubendiassilva@hotmail.com"
-                android:textSize="18dp"
-                android:layout_marginBottom="3dp"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lbl_email"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="3dp"/>
+                <TextView
+                    android:layout_weight="3"
+                    android:id="@+id/tv_professional_email_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="rubendiassilva@hotmail.com"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="3dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Endereço: Rua Coronel Meireles, 1341"
-                android:textSize="18dp"
-                android:layout_marginBottom="3dp"/>
-            <TextView
-                android:layout_width="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lbl_address"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="3dp"/>
+                <TextView
+                    android:layout_weight="3"
+                    android:id="@+id/tv_professional_address_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Rua Coronel Meireles, 1341"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="3dp"/>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Celular: (11) "
-                android:textSize="18dp"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_weight="1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/lbl_phone"
+                    android:textSize="18dp"
+                    android:layout_marginBottom="3dp"/>
+                <TextView
+                    android:layout_weight="3"
+                    android:id="@+id/tv_professional_phone_text"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="(11) 999999999"
+                    android:textSize="18dp"/>
+            </LinearLayout>
+
+
+
         </LinearLayout>
 
     </LinearLayout>
 
-   
 
 
-</FrameLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
