--- a/app/src/main/res/layout/activity_about_user.xml
+++ b/app/src/main/res/layout/activity_about_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -30,6 +30,7 @@
         </LinearLayout>
 
         <TextView
+            android:id="@+id/tv_username_text"
             android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,6 +51,7 @@
                 android:layout_marginRight="2dp"/>
 
             <TextView
+                android:id="@+id/tv_place_city_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_light"
@@ -198,7 +200,7 @@
             android:text="@string/settings"
             style="@style/OrangeButton"
             android:background="@drawable/rounded_rectangle"
-            android:onClick="cadastroProfissional"/>
+            />
 
         <TextView
             android:layout_marginTop="35dp"
@@ -211,4 +213,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</LinearLayout>
