--- a/app/src/main/res/layout/activity_faq.xml
+++ b/app/src/main/res/layout/activity_faq.xml
@@ -4,54 +4,80 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:paddingRight="20dp"
-    android:paddingLeft="20dp"
-    tools:context=".Faq">
+    tools:context=".Faq"
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/tb_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/primary"
+        >
+        <Button
+            android:id="@+id/btn_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:padding="16dp"
+            android:text="@string/txt_back"
+            android:textColor="@color/white"
+            android:textFontWeight="@integer/material_motion_duration_medium_1"
+            android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
+            android:textSize="16sp"/>
+    </androidx.appcompat.widget.Toolbar>
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="20dp"
-        android:layout_marginTop="100dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingRight="20dp"
+        android:paddingLeft="20dp"
         >
         <LinearLayout
-            android:layout_width="50dp"
-            android:layout_height="42dp"
-            android:background="@drawable/rounded_left_border"
-            android:backgroundTint="@color/primary"
-            android:gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="10dp"
             >
-            <ImageView
-                android:layout_width="25dp"
-                android:layout_height="25dp"
-                android:src="@mipmap/ic_pesc"
-                android:layout_margin="17dp"
+            <LinearLayout
+                android:layout_width="50dp"
+                android:layout_height="42dp"
+                android:background="@drawable/rounded_left_border"
+                android:backgroundTint="@color/primary"
+                android:gravity="center"
+                >
+                <ImageView
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:src="@mipmap/ic_pesc"
+                    android:layout_margin="17dp"
+                    />
+            </LinearLayout>
+            <EditText
+                android:id="@+id/edt_name"
+                android:layout_width="250dp"
+                android:layout_height="42dp"
+                android:background="#F1F1F1"
+                android:paddingLeft="10dp"
+                android:textSize="15dp"
+                android:hint="Pesquisar..."
+                android:fontFamily="@font/montserrat_light"
                 />
         </LinearLayout>
-        <EditText
-            android:id="@+id/edt_name"
-            android:layout_width="250dp"
-            android:layout_height="42dp"
-            android:background="#F1F1F1"
-            android:paddingLeft="10dp"
-            android:textSize="15dp"
-            android:hint="Pesquisar..."
-            android:fontFamily="@font/montserrat_light"
-            />
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/recyclerView"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                />
+
+        </ScrollView>
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="600dp">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/recyclerView"
-            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            />
-
-    </ScrollView>
 
 </LinearLayout>
