--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -28,6 +28,7 @@
                 android:layout_marginBottom="10dp"/>
 
             <LinearLayout
+                android:id="@+id/home_blog"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:background="@mipmap/bg_home_blog"
@@ -54,6 +55,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/home_places"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:background="@mipmap/bg_home_lugares"
@@ -80,6 +82,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/home_site"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:background="@mipmap/bg_home_site"
@@ -104,6 +107,7 @@
                     android:text="Conheça nosso todo nosso sistema na versão web"/>
             </LinearLayout>
             <LinearLayout
+                android:id="@+id/home_faq"
                 android:layout_width="match_parent"
                 android:layout_height="160dp"
                 android:background="@mipmap/bg_home_faq"
