--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -64,6 +64,7 @@
             android:paddingTop="30dp">
 
             <LinearLayout
+                android:id="@+id/settings_appointment_history"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -98,6 +99,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/settings_edit_profile"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -132,6 +134,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/settings_blog"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -165,6 +168,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/settings_faq"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -199,6 +203,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/settings_support"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
@@ -236,12 +241,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
+                android:id="@+id/container_exit"
                 >
 
                 <LinearLayout
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_vertical">
+                    android:gravity="center_vertical"
+                    >
 
                     <ImageView
                         android:layout_width="40dp"
@@ -252,7 +259,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Sair"
+                        android:text="@string/txt_exit"
                         android:fontFamily="@font/montserrat_light"
                         android:textSize="18dp"/>
                 </LinearLayout>
