--- a/app/src/main/res/layout/places_list_item.xml
+++ b/app/src/main/res/layout/places_list_item.xml
@@ -2,7 +2,6 @@
 <GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -13,7 +12,6 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginHorizontal="5dp"
-        android:layout_marginBottom="10dp"
         app:cardCornerRadius="20dp"
         app:cardElevation="4dp"
         android:orientation="horizontal"
@@ -154,6 +152,7 @@
                    />
            </LinearLayout>
             <Button
+                android:id="@+id/btn_more"
                 style="@style/OrangeButton"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
