--- a/app/src/main/res/layout/professional_list_item.xml
+++ b/app/src/main/res/layout/professional_list_item.xml
@@ -5,7 +5,6 @@
     android:layout_gravity="center_horizontal"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_marginHorizontal="5dp"
     android:layout_marginBottom="10dp"
     >
 
@@ -50,33 +49,17 @@
                android:text="@string/txt_hint_professional_name"
                />
 
-           <LinearLayout
-               android:id="@+id/rating_container"
-               android:layout_width="match_parent"
+           <RatingBar
+               android:id="@+id/rb_rating"
+               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
-               android:orientation="horizontal"
-               >
-               <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/star_fill"/>
-               <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/star_fill"/>
-               <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/star_fill"/>
-               <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/star_fill"/>
-               <ImageView
-                   android:layout_width="wrap_content"
-                   android:layout_height="wrap_content"
-                   android:src="@drawable/star_fill"/>
-           </LinearLayout>
+               android:layout_gravity="center"
+               android:isIndicator="true"
+               android:theme="@style/RatingBar"
+               android:backgroundTintMode="@color/secondary"
+               android:stepSize="0.1"
+               android:numStars="5"
+               />
 
 
            <TextView
@@ -93,6 +76,7 @@
                android:text="@string/txt_speciality"
                />
            <Button
+               android:id="@+id/btn_more"
                style="@style/OrangeButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
