--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -28,7 +28,7 @@
         android:icon="@drawable/baseline_calendar_today_24"
         />
     <item
-        android:title="@string/menu_profile"
+        android:title="@string/menu_settings"
         android:id="@+id/settings"
         android:icon="@drawable/baseline_settings_24"
         />
