--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,6 +8,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="toolbarStyle">@style/ToolBarStyle</item>
     </style>
 
     <style name="OrangeButton">
@@ -28,5 +29,26 @@
         <item name="android:layout_height">45dp</item>
         <item name="android:fontFamily">@font/montserrat_light</item>
         <item name="textAllCaps">false</item>
+    </style>
+
+    <style name="ToolBarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:background">#EA8D8D</item>
+        <item name="titleTextAppearance">@style/TitleTextAppearance</item>
+        <item name="subtitleTextAppearance">@style/SubTitleTextAppearance</item>
+    </style>
+
+    <style name="TitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">#38ADAE</item>
+    </style>
+
+    <style name="SubTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Subtitle">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">#00B7FF</item>
+    </style>
+
+    <style name="RatingBar" parent="Theme.AppCompat">
+        <item name="colorControlNormal">@color/gray_400</item>
+        <item name="colorControlActivated">@color/secondary</item>
     </style>
 </resources>
