--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -19,6 +19,7 @@
             android:gravity="center">
 
             <ImageView
+                android:id="@+id/iv_profile_image"
                 android:layout_width="120dp"
                 android:layout_height="120dp"
                 android:src="@mipmap/foto_perfil_mulher"
