--- a/app/src/main/res/layout/res_frag_avaliacao_dialog.xml
+++ b/app/src/main/res/layout/res_frag_avaliacao_dialog.xml
@@ -19,9 +19,11 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/iv_professional_profile_image"
             android:layout_width="96dp"
             android:layout_height="96dp"
-            android:src="@drawable/user" />
+            android:src="@drawable/user"
+            />
 
         <LinearLayout
             android:layout_width="match_parent"
