--- a/app/src/main/res/layout/activity_about_professional.xml
+++ b/app/src/main/res/layout/activity_about_professional.xml
@@ -111,7 +111,7 @@
             android:layout_marginBottom="10dp"
             android:background="@drawable/rounded_rectangle"
             android:layout_marginTop="10dp"
-            android:text="Agendar consulta"
+            android:text="@string/txt_schedule_appointment"
             />
 
         <LinearLayout
