--- a/app/src/main/res/layout/activity_edit_user.xml
+++ b/app/src/main/res/layout/activity_edit_user.xml
@@ -1,14 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".EditUser">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
         android:orientation="vertical">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/tb_toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/primary"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            >
+            <Button
+                android:id="@+id/btn_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="#00000000"
+                android:padding="16dp"
+                android:text="@string/txt_back"
+                android:textColor="@color/white"
+                android:textFontWeight="@integer/material_motion_duration_medium_1"
+                android:drawableLeft="@drawable/baseline_arrow_back_ios_24"
+                android:textSize="16sp"/>
+        </androidx.appcompat.widget.Toolbar>
+
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -38,7 +64,7 @@
             android:text="Alterar imagem"
             style="@style/OrangeButton"
             android:background="@drawable/rounded_rectangle"
-            android:onClick="cadastroProfissional"/>
+            />
 
         <ScrollView
             android:layout_width="match_parent"
@@ -328,42 +354,42 @@
                         android:fontFamily="@font/montserrat_light"
                         />
                 </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:paddingVertical="20dp"
+                    >
+                    <Button
+                        android:id="@+id/btn_cancel"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="20dp"
+                        android:text="Cancelar"
+                        style="@style/OrangeButton"
+                        android:background="@drawable/rounded_rectangle"
+                        />
+
+                    <Button
+                        android:id="@+id/btn_save"
+                        android:layout_width="150dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:layout_marginHorizontal="20dp"
+                        android:text="Salvar"
+                        style="@style/BlueButton"
+                        android:background="@drawable/rounded_rectangle"
+                        />
+
+                </LinearLayout>
             </LinearLayout>
         </ScrollView>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginTop="30dp">
-
-            <Button
-                android:id="@+id/btn_cancel"
-                android:layout_width="150dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:text="Cancelar"
-                style="@style/OrangeButton"
-                android:background="@drawable/rounded_rectangle"
-                android:layout_marginRight="20dp"
-                 />
-
-            <Button
-                android:id="@+id/btn_save"
-                android:layout_width="150dp"
-                android:layout_height="45dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="20dp"
-                android:text="Salvar"
-                style="@style/BlueButton"
-                android:background="@drawable/rounded_rectangle"
-                 />
-
-        </LinearLayout>
 
 
 
     </LinearLayout>
-
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
